--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
@@ -69,7 +69,7 @@
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:src="@drawable/ic_more"
-        android:tint="#507cbe" />
+        android:tint="@color/groups.blue_color" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/pollQuestionTextView"
@@ -127,7 +127,7 @@
                 app:rcBackgroundPadding="0dp"
                 app:rcMax="100"
                 app:rcProgress="0"
-                app:rcProgressColor="#507cbe"
+                app:rcProgressColor="@color/groups.blue_color"
                 app:rcRadius="0dp"
                 app:rcReverse="false" />
 
@@ -181,7 +181,7 @@
                 app:rcBackgroundPadding="0dp"
                 app:rcMax="100"
                 app:rcProgress="0"
-                app:rcProgressColor="#507cbe"
+                app:rcProgressColor="@color/groups.blue_color"
                 app:rcRadius="0dp"
                 app:rcReverse="false" />
 
@@ -245,7 +245,7 @@
                 app:rcBackgroundPadding="0dp"
                 app:rcMax="100"
                 app:rcProgress="0"
-                app:rcProgressColor="#507cbe"
+                app:rcProgressColor="@color/groups.blue_color"
                 app:rcRadius="0dp"
                 app:rcReverse="false" />
 
@@ -299,7 +299,7 @@
                 app:rcBackgroundPadding="0dp"
                 app:rcMax="100"
                 app:rcProgress="0"
-                app:rcProgressColor="#507cbe"
+                app:rcProgressColor="@color/groups.blue_color"
                 app:rcRadius="0dp"
                 app:rcReverse="false" />
 
@@ -313,7 +313,7 @@
                 android:background="@color/transparent"
                 android:clickable="false"
                 android:gravity="center_vertical"
-                android:text="BLUE"
+                android:text=""
                 android:textColor="@color/white"
                 android:visibility="gone"
                 app:fontName="oswald_regular.ttf" />
