--- a/MyCity4Kids/MyCity4Kids/res/layout/report_media_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/report_media_post_item.xml
@@ -67,7 +67,7 @@
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:src="@drawable/ic_more"
-        android:tint="#507cbe" />
+        android:tint="@color/groups.blue_color" />
 
     <!--<com.daimajia.slider.library.SliderLayout-->
     <!--android:id="@+id/postDataViewPager"-->
@@ -86,10 +86,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:ellipsize="end"
         android:gravity="left"
-        android:maxLines="3"
-        android:text="lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ddwdctgbhtg dawdw vfbgb ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum"
+        android:text=""
         android:textColor="#9c9dac"
         android:textSize="10sp"
         app:fontName="open_sans.ttf" />
