--- a/MyCity4Kids/MyCity4Kids/res/layout/group_settings_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_settings_activity.xml
@@ -163,12 +163,13 @@
             android:textSize="11sp"
             app:fontName="oswald.ttf" />
 
-        <Switch
+        <android.support.v7.widget.SwitchCompat
             android:id="@+id/disableNotificationSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:theme="@style/SCBSwitch" />
     </RelativeLayout>
 
     <View
