--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
@@ -50,10 +50,9 @@
         android:layout_alignStart="@+id/usernameTextView"
         android:layout_below="@id/usernameTextView"
         android:layout_marginTop="2dp"
-        android:ellipsize="end"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="16 March 2018"
+        android:text=""
         android:textColor="@color/ad.comment.body"
         android:textSize="12sp"
         app:fontName="open_sans.ttf" />
@@ -69,7 +68,7 @@
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:src="@drawable/ic_more"
-        android:tint="#507cbe" />
+        android:tint="@color/groups.blue_color" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/postDataTextView"
@@ -79,9 +78,9 @@
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
         android:layout_marginTop="15dp"
-        android:gravity="left"
-        android:text="lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ddwdctgbhtg dawdw vfbgb ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum"
-        android:textColor="#9c9dac"
+        android:gravity="start"
+        android:text=""
+        android:textColor="@color/groups.grey"
         android:textSize="12sp"
         android:visibility="visible"
         app:fontName="open_sans.ttf" />
