--- a/MyCity4Kids/MyCity4Kids/res/layout/leave_group_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/leave_group_activity.xml
@@ -96,7 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
-        android:background="#507cbe"
+        android:background="@color/groups.blue_color"
         android:elevation="20dp"
         android:gravity="center"
         android:padding="15dp"
