--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -167,13 +167,13 @@
         android:visibility="gone" />
 
     <!--<ImageView-->
-        <!--android:id="@+id/coachmarksImageView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:elevation="5dp"-->
-        <!--android:scaleType="fitXY"-->
-        <!--android:src="@drawable/coachmark_home"-->
-        <!--android:visibility="gone" />-->
+    <!--android:id="@+id/coachmarksImageView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:elevation="5dp"-->
+    <!--android:scaleType="fitXY"-->
+    <!--android:src="@drawable/coachmark_home"-->
+    <!--android:visibility="gone" />-->
 
     <FrameLayout
         android:id="@+id/transparentLayerNavigation"
@@ -185,6 +185,176 @@
         android:clickable="true"
         android:elevation="10dp"
         android:visibility="gone" />
+
+
+    <RelativeLayout
+        android:id="@+id/groupCoachmark"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:background="@color/dark_transparent"
+        android:elevation="8dp"
+        android:visibility="invisible">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            app:theme="@style/ToolbarTheme"
+            app:titleTextAppearance="@style/ToolbarTheme.Title">
+
+            <RelativeLayout
+                android:id="@+id/toolbarRelativeLayout0"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible">
+
+                <ImageView
+                    android:id="@+id/menuImageView0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:paddingBottom="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:src="@drawable/hamburger_menu"
+                    android:visibility="invisible" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/toolbarTitle0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/menuImageView0"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
+                    android:text="@string/home.toolbar.title"
+                    android:textColor="@color/home.toolbar.titlecolor"
+                    android:textSize="20sp"
+                    android:visibility="invisible"
+                    app:fontName="oswald_regular.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/selectedlangGuideTextView0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/searchAllImageView0"
+                    android:drawablePadding="5dp"
+                    android:drawableRight="@drawable/arrowdownnew"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:text="@string/language_label.english"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:visibility="invisible"
+                    app:fontName="oswald_regular.ttf" />
+
+                <ImageView
+                    android:id="@+id/searchAllImageView0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:src="@drawable/ic_search"
+                    android:visibility="invisible" />
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.Toolbar>
+
+        <View
+            android:layout_width="54dp"
+            android:layout_height="2dp"
+            android:layout_above="@+id/navBar0"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:background="@color/white" />
+
+        <View
+            android:id="@+id/verticalLine02"
+            android:layout_width="2dp"
+            android:layout_height="30dp"
+            android:layout_above="@+id/navBar0"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="35dp"
+            android:background="@color/white" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/groupsGuideTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/verticalLine02"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15dp"
+            android:background="@color/white"
+            android:paddingBottom="7dp"
+            android:paddingLeft="9dp"
+            android:paddingRight="9dp"
+            android:paddingTop="7dp"
+            android:text="@string/guide.groups_tour"
+            android:textColor="@color/black"
+            app:fontName="oswald.ttf" />
+
+        <LinearLayout
+            android:id="@+id/navBar0"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            android:weightSum="5">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:src="@drawable/tab1"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:src="@drawable/tab2"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:src="@drawable/bottom_bar_home"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:src="@drawable/tab3"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:src="@drawable/tab4"
+                android:tint="@color/white" />
+
+        </LinearLayout>
+    </RelativeLayout>
+
 
     <RelativeLayout
         android:id="@+id/firstCoachmark"
