--- a/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
@@ -367,7 +367,6 @@
                 android:id="@+id/savePostTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/notificationToggleTextView"
                 android:background="@color/white"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
@@ -381,7 +380,6 @@
                 android:id="@+id/notificationToggleTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/commentToggleTextView"
                 android:background="@color/white"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
@@ -394,7 +392,6 @@
                 android:id="@+id/commentToggleTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/reportPostTextView"
                 android:background="@color/white"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
@@ -413,6 +410,19 @@
                 android:text="@string/groups.report_post"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/editPostTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="@string/groups.edit_post"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                android:visibility="gone"
                 app:fontName="open_sans.ttf" />
 
             <com.mycity4kids.widget.CustomFontTextView
@@ -490,38 +500,4 @@
         android:elevation="6dp"
         android:visibility="gone" />
 
-    <!--<RelativeLayout-->
-    <!--android:id="@+id/blockedViewContainer"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:background="#545454"-->
-    <!--android:clickable="true"-->
-    <!--android:elevation="5dp"-->
-    <!--android:fitsSystemWindows="true"-->
-    <!--android:visibility="gone">-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/blockedCloseImageView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:layout_alignParentTop="true"-->
-    <!--android:layout_marginRight="15dp"-->
-    <!--android:layout_marginTop="15dp"-->
-    <!--android:padding="14dp"-->
-    <!--android:src="@drawable/cross_icon_back"-->
-    <!--android:tint="@color/white" />-->
-
-    <!--<com.mycity4kids.widget.CustomFontTextView-->
-    <!--android:id="@+id/blockedUserTextView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_centerInParent="true"-->
-    <!--android:gravity="center"-->
-    <!--android:text="You have been banned from this group"-->
-    <!--android:textColor="@color/white"-->
-    <!--android:textSize="18sp"-->
-    <!--app:fontName="oswald.ttf" />-->
-
-    <!--</RelativeLayout>-->
 </android.support.design.widget.CoordinatorLayout>
