--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
@@ -85,14 +85,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/userImageView"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:ellipsize="end"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="15dp"
         android:gravity="start"
         android:text=""
         android:textColor="@color/groups.grey"
-        android:textSize="10sp"
+        android:textSize="14sp"
+        android:visibility="visible"
         app:fontName="open_sans.ttf" />
 
     <com.mycity4kids.widget.GroupPostMediaViewPager
