--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
@@ -89,6 +89,7 @@
         android:layout_marginRight="2dp"
         android:layout_marginTop="15dp"
         android:gravity="start"
+        android:textIsSelectable="true"
         android:text=""
         android:textColor="@color/groups.grey"
         android:textSize="14sp"
