--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_text_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_text_poll_post_item.xml
@@ -316,11 +316,19 @@
             android:visibility="invisible" />
     </RelativeLayout>
 
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/totalVoteCountTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/option4Container"
+        android:layout_marginTop="15dp"
+        android:text="" />
+
     <LinearLayout
         android:id="@+id/upvoteContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/option4Container"
+        android:layout_below="@+id/totalVoteCountTextView"
         android:layout_marginTop="15dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
@@ -348,7 +356,7 @@
         android:id="@+id/downvoteContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/option4Container"
+        android:layout_below="@+id/totalVoteCountTextView"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="16dp"
         android:layout_toRightOf="@+id/upvoteContainer"
@@ -378,7 +386,7 @@
         android:id="@+id/postCommentsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/option4Container"
+        android:layout_below="@+id/totalVoteCountTextView"
         android:layout_marginRight="5dp"
         android:layout_marginTop="10dp"
         android:layout_toLeftOf="@+id/addCommentImageView"
@@ -395,7 +403,7 @@
         android:id="@+id/addCommentImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/option4Container"
+        android:layout_below="@+id/totalVoteCountTextView"
         android:layout_marginRight="4dp"
         android:layout_marginTop="10dp"
         android:layout_toLeftOf="@+id/shareTextView"
@@ -408,7 +416,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/option4Container"
+        android:layout_below="@+id/totalVoteCountTextView"
         android:layout_marginTop="10dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
