--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
@@ -78,6 +78,7 @@
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
         android:layout_marginTop="15dp"
+        android:textIsSelectable="true"
         android:gravity="start"
         android:text=""
         android:textColor="@color/groups.grey"
