--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home_new.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home_new.xml
@@ -17,7 +17,7 @@
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/home.trending.tabbar_text"
         app:tabTextAppearance="@style/CustomTabText"
-        app:tabTextColor="@color/home.trending.tabbar_text" />
+        app:tabTextColor="#96545454" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
