--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -5,6 +5,51 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/bookmarkInfoView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@color/app_blue"
+        android:elevation="5dp"
+        android:padding="10dp"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/bookmarkImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@drawable/bookmark_icon_round_bg"
+            android:padding="10dp"
+            android:src="@drawable/ic_bookmark" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/messageTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@+id/viewBookmarkedArticleTextView"
+            android:layout_toRightOf="@+id/bookmarkImageView"
+            android:text="your article is successfully bookmarked in account page"
+            android:textColor="@color/white"
+            app:fontName="oswald_regular.ttf" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/viewBookmarkedArticleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:text="VIEW"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:fontName="oswald_regular.ttf" />
+    </RelativeLayout>
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -52,8 +97,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
-                android:layout_toLeftOf="@+id/searchAllImageView"
-                android:layout_toStartOf="@+id/searchAllImageView"
+                android:layout_toLeftOf="@+id/rightContainerLL"
+                android:layout_toStartOf="@+id/rightContainerLL"
                 android:gravity="center"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
@@ -95,38 +140,75 @@
                 android:visibility="gone"
                 app:fontName="oswald_regular.ttf" />
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/langTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/searchAllImageView"
-                android:drawablePadding="5dp"
-                android:drawableRight="@drawable/arrowdownnew"
-                android:paddingBottom="10dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="10dp"
-                android:paddingTop="10dp"
-                android:text="English"
-                android:textColor="#545454"
-                android:textSize="20sp"
-                android:visibility="visible"
-                app:fontName="oswald_regular.ttf" />
-
-            <ImageView
-                android:id="@+id/searchAllImageView"
+            <LinearLayout
+                android:id="@+id/rightContainerLL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:paddingBottom="10dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="10dp"
-                android:src="@drawable/ic_search"
-                android:visibility="visible" />
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/searchAllImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:src="@drawable/ic_search"
+                    android:visibility="visible" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/langTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="5dp"
+                    android:drawableRight="@drawable/arrowdownnew"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp"
+                    android:text="English"
+                    android:textColor="#545454"
+                    android:textSize="20sp"
+                    android:visibility="visible"
+                    app:fontName="oswald_regular.ttf" />
+            </LinearLayout>
+
+            <!--<ImageView-->
+            <!--android:id="@+id/searchAllImageView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_toLeftOf="@+id/langTextView"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingLeft="10dp"-->
+            <!--android:paddingRight="10dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:src="@drawable/ic_search"-->
+            <!--android:visibility="visible" />-->
+
+            <!--<com.mycity4kids.widget.CustomFontTextView-->
+            <!--android:id="@+id/langTextView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:drawablePadding="5dp"-->
+            <!--android:drawableRight="@drawable/arrowdownnew"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingLeft="5dp"-->
+            <!--android:paddingRight="10dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:text="English"-->
+            <!--android:textColor="#545454"-->
+            <!--android:textSize="20sp"-->
+            <!--android:visibility="visible"-->
+            <!--app:fontName="oswald_regular.ttf" />-->
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
