--- a/MyCity4Kids/MyCity4Kids/res/layout/explore_article_listing_type_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/explore_article_listing_type_activity.xml
@@ -6,27 +6,139 @@
     android:background="@color/white"
     android:clickable="true">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:elevation="3dp"
+        android:elevation="5dp"
         android:minHeight="?attr/actionBarSize"
-        android:paddingLeft="10dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:tabIndicatorColor="@color/explore_listing.tabbar_indicator"
-        app:tabIndicatorHeight="2dp"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@color/explore_listing.tabbar_text"
-        app:tabTextAppearance="@style/CustomTabText"
-        app:tabTextColor="@color/explore_listing.tabbar_text" />
+        app:theme="@style/ToolbarTheme"
+        app:titleTextAppearance="@style/ToolbarTheme.Title">
+
+        <RelativeLayout
+            android:id="@+id/toolbarRelativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/toolbarTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/home_screen.select_an_option.title"
+                android:textColor="@color/home.toolbar.titlecolor"
+                android:textSize="20sp"
+                app:fontName="oswald_regular.ttf" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
+
+    <!--<android.support.design.widget.TabLayout-->
+    <!--android:id="@+id/tab_layout"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@+id/toolbar"-->
+    <!--android:background="?attr/colorPrimary"-->
+    <!--android:elevation="3dp"-->
+    <!--android:minHeight="?attr/actionBarSize"-->
+    <!--android:paddingLeft="10dp"-->
+    <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
+    <!--app:tabIndicatorColor="@color/explore_listing.tabbar_indicator"-->
+    <!--app:tabIndicatorHeight="2dp"-->
+    <!--app:tabMode="scrollable"-->
+    <!--app:tabSelectedTextColor="@color/explore_listing.tabbar_text"-->
+    <!--app:tabTextAppearance="@style/CustomTabText"-->
+    <!--app:tabTextColor="@color/explore_listing.tabbar_text" />-->
+
+    <HorizontalScrollView
+        android:id="@+id/quickLinkContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:elevation="8dp"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/todaysBestTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/quick_links_btn_bg"
+                android:text="@string/article_listing.type.todays_best_label"
+                android:textColor="@color/app_light_black"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/editorsPickTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/quick_links_btn_bg"
+                android:text="@string/article_listing.type.editor_label"
+                android:textColor="@color/app_light_black"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/shortStoryTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/quick_links_btn_bg"
+                android:text="@string/article_listing.type.short_story_label"
+                android:textColor="@color/app_light_black"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/forYouTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/quick_links_btn_bg"
+                android:text="@string/article_listing.type.for_you_label"
+                android:textColor="@color/app_light_black"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/videosTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/quick_links_btn_bg"
+                android:text="@string/article_listing.type.videos_label"
+                app:fontName="oswald_regular.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/recentTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/quick_links_btn_bg"
+                android:text="@string/article_listing.type.recent_label"
+                android:textColor="@color/app_light_black"
+                app:fontName="oswald_regular.ttf" />
+        </LinearLayout>
+    </HorizontalScrollView>
+
 
     <com.mycity4kids.widget.CustomFontEditText
         android:id="@+id/searchTopicsEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_below="@+id/tab_layout"
+        android:layout_below="@+id/quickLinkContainer"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="4dp"
@@ -70,28 +182,122 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/dark_transparent"
-        android:elevation="4dp"
+        android:elevation="6dp"
         android:visibility="gone">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/guide_tab_layout"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/guidetoolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
+            android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
-            android:paddingLeft="10dp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:tabIndicatorColor="@color/explore_listing.tabbar_indicator"
-            app:tabIndicatorHeight="0dp"
-            app:tabMode="scrollable"
-            app:tabSelectedTextColor="@color/white"
-            app:tabTextAppearance="@style/CustomTabText"
-            app:tabTextColor="@color/white" />
+            app:theme="@style/ToolbarTheme"
+            app:titleTextAppearance="@style/ToolbarTheme.Title">
+
+            <RelativeLayout
+                android:id="@+id/guidetoolbarRelativeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/guidetoolbarTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="@string/home_screen.select_an_option.title"
+                    android:textColor="@color/home.toolbar.titlecolor"
+                    android:textSize="20sp"
+                    app:fontName="oswald_regular.ttf" />
+
+            </RelativeLayout>
+        </android.support.v7.widget.Toolbar>
+
+        <HorizontalScrollView
+            android:id="@+id/guideQuickLinkContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/guidetoolbar"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:elevation="8dp"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/guidetodaysBestTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/quick_links_btn_bg"
+                    android:text="@string/article_listing.type.todays_best_label"
+                    android:textColor="@color/app_light_black"
+                    app:fontName="oswald_regular.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/guideeditorsPickTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/quick_links_btn_bg"
+                    android:text="@string/article_listing.type.editor_label"
+                    android:textColor="@color/app_light_black"
+                    app:fontName="oswald_regular.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/guideshortStoryTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/quick_links_btn_bg"
+                    android:text="@string/article_listing.type.short_story_label"
+                    android:textColor="@color/app_light_black"
+                    app:fontName="oswald_regular.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/guideforYouTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/quick_links_btn_bg"
+                    android:text="@string/article_listing.type.for_you_label"
+                    android:textColor="@color/app_light_black"
+                    app:fontName="oswald_regular.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/guidevideosTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/quick_links_btn_bg"
+                    android:text="@string/article_listing.type.videos_label"
+                    app:fontName="oswald_regular.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/guiderecentTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/quick_links_btn_bg"
+                    android:text="@string/article_listing.type.recent_label"
+                    android:textColor="@color/app_light_black"
+                    app:fontName="oswald_regular.ttf" />
+            </LinearLayout>
+        </HorizontalScrollView>
 
         <View
             android:layout_width="200dp"
             android:layout_height="2dp"
-            android:layout_below="@id/guide_tab_layout"
+            android:layout_below="@id/guideQuickLinkContainer"
             android:layout_centerHorizontal="true"
             android:background="@color/white" />
 
@@ -99,7 +305,7 @@
             android:id="@+id/verticalLine_1"
             android:layout_width="2dp"
             android:layout_height="20dp"
-            android:layout_below="@id/guide_tab_layout"
+            android:layout_below="@id/guideQuickLinkContainer"
             android:layout_centerHorizontal="true"
             android:background="@color/white" />
 
@@ -125,7 +331,7 @@
             android:id="@+id/guide_exploreCategoriesLabel"
             android:layout_width="match_parent"
             android:layout_height="52dp"
-            android:layout_below="@+id/guide_tab_layout"
+            android:layout_below="@+id/guideQuickLinkContainer"
             android:gravity="center"
             android:text="@string/explore_listing.explore_categories.title"
             android:textColor="@color/explore_listing.explore_categories.title"
