--- a/MyCity4Kids/MyCity4Kids/res/layout/explore_events_resources_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/explore_events_resources_activity.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/home_bg"
-    android:clickable="true">
+    android:background="@color/white"
+    android:clickable="true"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -27,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="@string/home_screen.select_an_option.title"
+                android:text="@string/home_screen.explore.title"
                 android:textColor="@color/home.toolbar.titlecolor"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
@@ -35,36 +36,17 @@
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
+    <View
+        android:id="@+id/toolbarUnderline"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="1dp"
         android:layout_below="@+id/toolbar"
-        android:background="?attr/colorPrimary"
-        android:elevation="3dp"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:tabIndicatorColor="@color/topic_articles.tabbar_indicator"
-        app:tabIndicatorHeight="2dp"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@color/topic_articles.tabbar_text"
-        app:tabTextAppearance="@style/CustomTabText"
-        app:tabTextColor="@color/topic_articles.tabbar_text" />
+        android:background="@color/light_underline" />
 
     <FrameLayout
-        android:id="@+id/topLayerGuideLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tab_layout"
-        android:layout_alignTop="@+id/toolbar"
-        android:background="@color/dark_transparent"
-        android:clickable="true"
-        android:elevation="6dp"
-        android:visibility="gone" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/tab_layout" />
+        android:layout_below="@+id/toolbarUnderline"
+        android:background="@android:color/white" />
 </RelativeLayout>
