--- a/MyCity4Kids/MyCity4Kids/res/layout/language_selection_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/language_selection_activity.xml
@@ -155,6 +155,7 @@
         android:text="@string/lang_sel.continue"
         android:textColor="@color/lang_sel.continue_text"
         android:textSize="17sp"
+        android:visibility="gone"
         app:fontName="oswald_regular.ttf" />
 
     <RelativeLayout
