--- a/MyCity4Kids/MyCity4Kids/res/layout/myaccount_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/myaccount_profile_activity.xml
@@ -181,7 +181,7 @@
         </LinearLayout>
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/articleSectionTextView"
+            android:id="@+id/publishedSectionTextView"
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:layout_below="@+id/statsCountContainer"
@@ -189,14 +189,14 @@
             android:drawablePadding="20dp"
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
-            android:text="@string/myprofile.section.articles_label"
+            android:text="@string/user_article.tabbar.published_label"
             app:fontName="oswald.ttf" />
 
         <View
             android:id="@+id/underline_1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@+id/articleSectionTextView"
+            android:layout_below="@+id/publishedSectionTextView"
             android:layout_marginEnd="20dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="20dp"
@@ -204,7 +204,7 @@
             android:background="@color/light_grey1" />
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/storySectionTextView"
+            android:id="@+id/draftSectionTextView"
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:layout_below="@+id/underline_1"
@@ -212,14 +212,14 @@
             android:drawablePadding="18dp"
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
-            android:text="@string/myprofile.section.short_story_label"
+            android:text="@string/user_article.tabbar.draft_label"
             app:fontName="oswald.ttf" />
 
         <View
             android:id="@+id/underline_2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@+id/storySectionTextView"
+            android:layout_below="@+id/draftSectionTextView"
             android:layout_marginEnd="20dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="20dp"
@@ -227,7 +227,7 @@
             android:background="@color/light_grey1" />
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/videosSectionTextView"
+            android:id="@+id/bookmarksSectionTextView"
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:layout_below="@+id/underline_2"
@@ -235,14 +235,14 @@
             android:drawablePadding="20dp"
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
-            android:text="@string/myprofile.section.videos_label"
+            android:text="@string/user_activities.tabs.bookmark"
             app:fontName="oswald.ttf" />
 
         <View
             android:id="@+id/underline_3"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@+id/videosSectionTextView"
+            android:layout_below="@+id/bookmarksSectionTextView"
             android:layout_marginEnd="20dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="20dp"
