--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -3,6 +3,7 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -123,23 +124,6 @@
                 android:tint="#507cbe"
                 android:visibility="gone" />
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/readAllTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:paddingBottom="10dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="10dp"
-                android:paddingTop="10dp"
-                android:text="@string/notification.read_all"
-                android:textColor="@color/notification.read_all"
-                android:textSize="15sp"
-                android:visibility="gone"
-                app:fontName="oswald_regular.ttf" />
-
             <LinearLayout
                 android:id="@+id/rightContainerLL"
                 android:layout_width="wrap_content"
@@ -177,38 +161,6 @@
                     android:visibility="visible"
                     app:fontName="oswald_regular.ttf" />
             </LinearLayout>
-
-            <!--<ImageView-->
-            <!--android:id="@+id/searchAllImageView"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:layout_toLeftOf="@+id/langTextView"-->
-            <!--android:paddingBottom="10dp"-->
-            <!--android:paddingLeft="10dp"-->
-            <!--android:paddingRight="10dp"-->
-            <!--android:paddingTop="10dp"-->
-            <!--android:src="@drawable/ic_search"-->
-            <!--android:visibility="visible" />-->
-
-            <!--<com.mycity4kids.widget.CustomFontTextView-->
-            <!--android:id="@+id/langTextView"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentEnd="true"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:drawablePadding="5dp"-->
-            <!--android:drawableRight="@drawable/arrowdownnew"-->
-            <!--android:paddingBottom="10dp"-->
-            <!--android:paddingLeft="5dp"-->
-            <!--android:paddingRight="10dp"-->
-            <!--android:paddingTop="10dp"-->
-            <!--android:text="English"-->
-            <!--android:textColor="#545454"-->
-            <!--android:textSize="20sp"-->
-            <!--android:visibility="visible"-->
-            <!--app:fontName="oswald_regular.ttf" />-->
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
@@ -248,15 +200,6 @@
         android:elevation="10dp"
         android:visibility="gone" />
 
-    <!--<ImageView-->
-    <!--android:id="@+id/coachmarksImageView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:elevation="5dp"-->
-    <!--android:scaleType="fitXY"-->
-    <!--android:src="@drawable/coachmark_home"-->
-    <!--android:visibility="gone" />-->
-
     <FrameLayout
         android:id="@+id/transparentLayerNavigation"
         android:layout_width="match_parent"
@@ -268,7 +211,6 @@
         android:elevation="10dp"
         android:visibility="gone" />
 
-
     <RelativeLayout
         android:id="@+id/groupCoachmark"
         android:layout_width="match_parent"
@@ -276,7 +218,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/dark_transparent"
         android:elevation="8dp"
-        android:visibility="invisible">
+        android:visibility="gone">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar0"
@@ -348,7 +290,6 @@
                     android:paddingTop="10dp"
                     android:src="@drawable/ic_search"
                     android:visibility="invisible" />
-
             </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
@@ -437,7 +378,6 @@
         </LinearLayout>
     </RelativeLayout>
 
-
     <RelativeLayout
         android:id="@+id/firstCoachmark"
         android:layout_width="match_parent"
@@ -445,7 +385,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/dark_transparent"
         android:elevation="8dp"
-        android:visibility="invisible">
+        android:visibility="gone">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar1"
@@ -486,39 +426,45 @@
                     android:visibility="invisible"
                     app:fontName="oswald_regular.ttf" />
 
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/selectedlangGuideTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@+id/searchAllImageView1"
-                    android:drawablePadding="5dp"
-                    android:drawableRight="@drawable/arrowdownnew"
-                    android:drawableTint="@color/white"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="10dp"
-                    android:paddingTop="10dp"
-                    android:text="@string/language_label.english"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    android:visibility="visible"
-                    app:fontName="oswald_regular.ttf" />
-
-                <ImageView
-                    android:id="@+id/searchAllImageView1"
+                <LinearLayout
+                    android:id="@+id/rightContainerLL1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingTop="10dp"
-                    android:src="@drawable/ic_search"
-                    android:visibility="invisible" />
+                    android:orientation="horizontal">
 
+                    <ImageView
+                        android:id="@+id/searchAllImageView1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:paddingBottom="10dp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:paddingTop="10dp"
+                        android:src="@drawable/ic_search"
+                        android:visibility="visible" />
+
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/selectedlangGuideTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="5dp"
+                        android:drawableRight="@drawable/arrowdownnew"
+                        android:drawableTint="@color/white"
+                        android:paddingBottom="10dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="10dp"
+                        android:paddingTop="10dp"
+                        android:text="@string/language_label.english"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:visibility="visible"
+                        app:fontName="oswald_regular.ttf" />
+
+                </LinearLayout>
             </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
@@ -646,7 +592,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/dark_transparent"
         android:elevation="8dp"
-        android:visibility="invisible">
+        android:visibility="gone">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar2"
