--- a/MyCity4Kids/MyCity4Kids/res/layout/leaf_topic_articles_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/leaf_topic_articles_activity.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/home_bg"
+    android:clickable="true">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:elevation="5dp"
         android:minHeight="?attr/actionBarSize"
         app:theme="@style/ToolbarTheme"
         app:titleTextAppearance="@style/ToolbarTheme.Title">
@@ -21,45 +23,48 @@
             android:visibility="visible">
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/toolbarTitle"
+                android:id="@+id/toolbarTitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="@string/subscribe_topics.toolbar.title"
-                android:textColor="@color/subscribe_topics.toolbar.title"
+                android:text="@string/home_screen.select_an_option.title"
+                android:textColor="@color/home.toolbar.titlecolor"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-    <View
-        android:id="@+id/toolbarUnderline"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/toolbar"
-        android:background="@color/light_underline" />
-
-    <TextView
-        android:id="@+id/emptyList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
-        android:gravity="center"
-        android:text="No result found"
-        android:visibility="gone" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/toolbar"
+        android:background="?attr/colorPrimary"
+        android:elevation="3dp"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:tabIndicatorColor="@color/topic_articles.tabbar_indicator"
+        app:tabIndicatorHeight="2dp"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@color/topic_articles.tabbar_text"
+        app:tabTextAppearance="@style/CustomTabText"
+        app:tabTextColor="@color/topic_articles.tabbar_text" />
+
+    <FrameLayout
+        android:id="@+id/topLayerGuideLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/tab_layout"
+        android:layout_alignTop="@+id/toolbar"
+        android:background="@color/dark_transparent"
+        android:clickable="true"
+        android:elevation="6dp"
         android:visibility="gone" />
 
-    <ListView
-        android:id="@+id/followerFollowingListView"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbarUnderline" />
+        android:layout_below="@id/tab_layout" />
 </RelativeLayout>
