--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_replies_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_replies_cell.xml
@@ -59,7 +59,7 @@
             android:singleLine="false"
             android:text="Comment Desc"
             android:textColor="@color/ad.comment.body"
-            android:textSize="@dimen/ad_comments_text"
+            android:textSize="16sp"
             app:fontName="open_sans.ttf" />
 
         <LinearLayout
@@ -79,7 +79,7 @@
                 android:padding="5dp"
                 android:text="Date"
                 android:textColor="@color/ad.comment.date"
-                android:textSize="@dimen/ad_comments_date"
+                android:textSize="14sp"
                 app:fontName="oswald.ttf" />
         </LinearLayout>
 
