--- a/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
@@ -49,7 +49,7 @@
                     android:drawableLeft="@drawable/ic_group_white"
                     android:drawablePadding="10dp"
                     android:gravity="center"
-                    android:text="247 members"
+                    android:text=""
                     android:textColor="@color/white"
                     android:textSize="14sp"
                     app:fontName="oswald.ttf" />
@@ -63,7 +63,7 @@
                     android:layout_marginBottom="10dp"
                     android:drawablePadding="10dp"
                     android:gravity="center"
-                    android:text="MARRIAGE AND DIVORCE"
+                    android:text=""
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="20sp"
