--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_summary_header.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_summary_header.xml
@@ -46,7 +46,7 @@
         android:layout_marginBottom="10dp"
         android:drawablePadding="10dp"
         android:gravity="center"
-        android:text="MARRIAGE AND DIVORCE"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="20sp"
         app:fontName="oswald_regular.ttf" />
